--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: azkadevops/nodejs:1.1
     container_name: jenkins-nodejs
     environment:
-      - PORT=4040
-      - MONGODB_URI="mongodb+srv://azkamalik0011:5X4ewU5DAGofKmQw@cluster0.7yhcjky.mongodb.net/new?retryWrites=true&w=majority"
+      - PORT = "4040"
+      - MONGODB_URI = "mongodb+srv://azkamalik0011:5X4ewU5DAGofKmQw@cluster0.7yhcjky.mongodb.net/new?retryWrites=true&w=majority"
     ports:
       - "3001:4040"
